--- a/Html and CSS/CSS/CSS Box Model/BoxModel1.html
+++ b/Html and CSS/CSS/CSS Box Model/BoxModel1.html
@@ -7,18 +7,24 @@
     <style>
       .element {
         background-color: lightgreen;
-        
-        /* Margin */
-        /* margin-top: 70px; */
-        margin-bottom: 70px;
-        margin-left: 30px;
-        margin-right: 30px;
 
         /* Margin */
-        padding-top: 20px;
+        /* margin-top: 70px;
+        margin-bottom: 70px;
+        margin-left: 30px;
+        margin-right: 30px;  */
+
+        /* Padding */
+        /*padding-top: 20px;
         padding-bottom: 20px;
-        padding-right: 20px;
-        padding-left: 20px;
+        padding-right: 50px;
+        padding-left: 30px; */
+
+        /* margin: top right bottom left(Clockwise order0 */
+        margin: 70px 30px 70px 30px;
+
+        /* padding: top right bottom left(Clockwise order0 */
+        padding: 20px 30px 20px 30px;
       }
     </style>
   </head>
