header and nav done

--- a/Project_1/WebSite.html
+++ b/Project_1/WebSite.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <!-- External Style sheet -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>tilde~</h1>
+      <nav>
+        <ul>
+            <li><a href="">HTMl5</a></li>
+            <li><a href="">CSS3</a></li>
+            <li><a href="">JavaScript</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
