--- a/Project_1/WebSite.html
+++ b/Project_1/WebSite.html
@@ -56,9 +56,7 @@
       </div>
     </article>
     <footer>
-          <div class="footer">
-            &copy; tilde~ 2023
-          </div>
+      <div class="footer">&copy; tilde~ 2023</div>
     </footer>
   </body>
 </html>
