article portion done

--- a/Project_1/WebSite.html
+++ b/Project_1/WebSite.html
@@ -12,14 +12,44 @@
       <h1>tilde~</h1>
       <nav>
         <ul>
-            <li><a href="">HTMl5</a></li>
-            <li><a href="">CSS3</a></li>
-            <li><a href="">JavaScript</a></li>
+          <li><a href="">HTMl5</a></li>
+          <li><a href="">CSS3</a></li>
+          <li><a href="">JavaScript</a></li>
         </ul>
       </nav>
     </header>
     <section>
-      <img src="./project_images/Web.png" alt="a person with system" class="section_img">
+      <img
+        src="./project_images/Web.png"
+        alt="a person with system"
+        class="section_img"
+      />
     </section>
+    <article>
+      <div>
+        <img src="./project_images/html (1).png" alt="html image" />
+        <h1>HTML</h1>
+        <p>HTML (Hypertext Markup Language) is the standard markup language for creating web pages. 
+           It uses tags to structure and format content, defining elements like headings, 
+           paragraphs, links, and images.           
+          </p>
+      </div>
+      <div>
+        <img src="./project_images/css.png" alt="css image">
+        <h1>CSS</h1>
+        <p>CSS (Cascading Style Sheets) is a styling language used for web design. 
+           It controls the layout, appearance, and presentation of HTML elements on 
+           web pages, enhancing visual aesthetics.
+          </p>
+      </div>
+      <div>
+        <img src="./project_images/icon.png" alt="">
+        <h1>JavaScript</h1>
+        <p>JavaScript (JS) is a versatile, high-level programming language used for 
+           web development. It enhances interactivity, dynamically modifying HTML
+           and handling user interactions in browsers, creating rich web applications.
+          </p>
+      </div>
+    </article>
   </body>
 </html>
