--- a/MERN/CSS/CSS Selectors/q10.html
+++ b/MERN/CSS/CSS Selectors/q10.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #the-one>.c1.c2{
+            color: blue; 
+        }
+    </style>
 </head>
 <body>
     <!-- Select the element with "Select me" and make it blue  -->
