--- a/MERN/HTML_1/demo.html
+++ b/MERN/HTML_1/demo.html
@@ -48,7 +48,9 @@
     </ol>
 
     <!--Span tag-->
-    <h2>Hello I am a <span style="color:crimson;font-style:italic">MERN</span> full stack developer.</h2>
+    <h2>
+        Hello I am a <span style="color:crimson;font-style:italic">MERN</span> full stack developer.
+    </h2>
 
     
 
