--- a/MERN/HTML_1/index.html
+++ b/MERN/HTML_1/index.html
@@ -81,14 +81,19 @@
     <img src="tilde.png" alt="This is tilde image">
 
 
-    <!--Tables : Collection of data in rows and columns is called tables.-->
+    <!--Tables : Collection of data in rows and columns is called tables.
+        <tr></tr> : table row tag. 
+        <td></td : table data tag. 
+        <tbody></tbody> : table body tag       
+    >-->
 
-    <table border = 5>
+    <table border = "1">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Age</th>
                     <th>Role</th>
+                    <th>State</th>
                 </tr>
             </thead>
             
@@ -97,22 +102,25 @@
                         <td>Mrityunjay</td>
                         <td>25</td>
                         <td>Developer</td>
+                        <td>Bihar</td>
                     </tr>
                     <tr>
                         <td>Krishna</td>
                         <td>24</td>
                         <td>Student</td>
+                        <td>Bihar</td>
                     </tr>
                     <tr>
                         <td>Avinash</td>
                         <td>27</td>
-                        <td>Teacher</td>    
+                        <td>Teacher</td>
+                        <td>Delhi</td>    
                     </tr>
                     
             </tbody>
     </table>
 
-    <table border="5">
+    <table border="2">
         <thead>
             <tr>
                 <th>Name</th>
@@ -130,7 +138,7 @@
             </tr>
 
             <tr>
-                <td>Princiee Gupta</td>
+                <td>Arvind</td>
                 <td>Uttar Pradesh</td>
                 <td>Orai</td>
             </tr>
@@ -138,6 +146,11 @@
                 <td>Mrinal</td>
                 <td>Bihar</td>
                 <td>Muzaffarpur</td>
+            </tr>
+            <tr>
+                <td>Sushma</td>
+                <td>Doctor</td>
+                <td>Merrut</td>
             </tr>
         </tbody>
     </table>
