code revision and notes is updated

--- a/Html and CSS/CSS/CSS Selectors/class.html
+++ b/Html and CSS/CSS/CSS Selectors/class.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Class</title>
     <style>
-        /* class selector */
-        .c1{
-            color:red
-        }
-        .c2{
-            color:blue
-        }
+      /* class selector */
+      .c1 {
+        color: red;
+      }
+      .c2 {
+        color: blue;
+      }
     </style>
-</head>
-<body>
-        <h1 class='c1'>I am heading 1</h1>
+  </head>
+  <body>
+    <h1 class="c1">I am heading 1</h1>
 
+    <h2 class="c2">I am heading 2</h2>
 
+    <p class="c1">I am a paragraph</p>
 
-        <h2 class='c2'>I am heading 2</h2>
-
-            
-
-
-        <p class='c1'>I am a paragraph</p>
-
-
-        <h3 class='c2'>I am heading 3</h3>
-
-
-</body>
+    <h3 class="c2">I am heading 3</h3>
+  </body>
 </html>
