--- a/Html and CSS/CSS/CSS Selectors/q1.html
+++ b/Html and CSS/CSS/CSS Selectors/q1.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Selectors</title>
 
     <style>
-            /* css selectors   */
-            /* element selectors   */
-            h1{
-                color:blue
-            }
-
-
+      /* css selectors   */
+      /* element selectors   */
+      h1 {
+        color: blue;
+      }
     </style>
-</head>
-<body>
-        <!-- add css styles to all p tags making its blue -->
+  </head>
+  <body>
+    <!--q1: add css styles to all p tags making its blue -->
 
-        <h1>I'am a paragraph. Help me to become h1 </h1>
-        <h1>I'am a paragraph. Help me to become h1 </h1>
-        <h1>I'am a paragraph. Help me to become h1 </h1>
-        <h1>I'am a paragraph. Help me to become h1 </h1>
-
-
-
-</body>
+    <h1>I'am a paragraph. Help me to become h1</h1>
+    <h1>I'am a paragraph. Help me to become h1</h1>
+    <h1>I'am a paragraph. Help me to become h1</h1>
+    <h1>I'am a paragraph. Help me to become h1</h1>
+  </body>
 </html>
