--- a/Html and CSS/CSS/CSS Selectors/q2.html
+++ b/Html and CSS/CSS/CSS Selectors/q2.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-        <!-- write css selector to select the obvious lists items make them blue -->
+        <!--q2: write css selector to select the obvious lists items make them blue -->
     <ol>
         <li>I</li>
         <li>Am</li>
