--- a/Html and CSS/CSS/CSS Selectors/q7.html
+++ b/Html and CSS/CSS/CSS Selectors/q7.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-            /* class with children combinator */
+            /* class with children combinator // The symbol ">" is used for direct children. */
             .c1>p{
                 color: blue;
             }
