--- a/Html and CSS/CSS/CSS Selectors/q8.html
+++ b/Html and CSS/CSS/CSS Selectors/q8.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* id selector */
+        /* id selector : to select id we use "#* tag symbol. 
+           Use of id : id is used to identify a particular element uniquely.
+        */
         #the-one{
             color: blue;
         }
@@ -14,7 +16,7 @@
 </head>
   
 <body>
-        <!-- select s2 with id= the-one and make it blue -->
+        <!-- select s2 with id=the-one and make it blue -->
         <p class="s1">Random</p>
         <p class="s1">Random</p>
         <p class="s1">Random</p>
