revision : css font with notes

--- a/Html and CSS/CSS/CSS Font/1_font.html
+++ b/Html and CSS/CSS/CSS Font/1_font.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+          /* 
+            Units of CSS fonts : 
+            a)in numbers eg : 200,500
+            b)in words eg: xx-large, bolder etc
+            c)CSS Pixels(px)
+            
+            c)CSS pixel(px): The term pixel is synonymous with the CSS units of absolute length px, 
+                             which is normally defined as being exactyly 1/96th of 1 inch.
+                             It is used to give the size of font in pixels.
+           
+          */
           .heading1{
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-weight: 200;
             font-size: xx-large;
+            color: blueviolet;
           }
           .heading2{
             font-family:Georgia, 'Times New Roman', Times, serif;
