font color notes and revision

--- a/Html and CSS/CSS/CSS Font/2_color.html
+++ b/Html and CSS/CSS/CSS Font/2_color.html
@@ -8,10 +8,12 @@
 
     <style>
       h2 {
+        /* color by name */
         color: blue;
       }
 
       .p1 {
+        /* color by rgb(red, green, blue combination) */
         color: rgb(211, 32, 68);
       }
 
@@ -20,7 +22,8 @@
       }
 
       .p3 {
-        
+        /* color by using hexcode */
+        /* background-color: #880808; */
         background-color: yellow;
       }
     </style>
