--- a/Html and CSS/CSS/CSS Font/2_color.html
+++ b/Html and CSS/CSS/CSS Font/2_color.html
@@ -8,7 +8,7 @@
 
     <style>
       h2 {
-        /* color by name */
+        /* color by color name */
         color: blue;
       }
 
@@ -23,8 +23,8 @@
 
       .p3 {
         /* color by using hexcode */
-        /* background-color: #880808; */
-        background-color: yellow;
+        background-color: #97f9f9;
+        
       }
     </style>
   </head>
