section portion done

--- a/Project_1/WebSite.html
+++ b/Project_1/WebSite.html
@@ -18,5 +18,8 @@
         </ul>
       </nav>
     </header>
+    <section>
+      <img src="./project_images/Web.png" alt="a person with system" class="section_img">
+    </section>
   </body>
 </html>
