--- a/Html and CSS/HTML_1/demo.html
+++ b/Html and CSS/HTML_1/demo.html
@@ -31,15 +31,18 @@
            quasi ratione aliquam perferendis exercitationem.</p>
     </div>
 
-    <!-- List tage -->
-    <!-- Unordered list-->
+    <!-- List tage : There are two types of list mentioned as below:
+                     1. Unordered List
+                     2. Ordered List 
+    -->
+    <!--1. Unordered list-->
     <ul>
         <li>Item list 1 </li>
         <li>Item list 2 </li>
         <li>Item list 3 </li>
     </ul>
 
-    <!--Ordered list-->
+    <!--2. Ordered list-->
 
     <ol>
         <li>Item list 1 </li>
@@ -47,17 +50,9 @@
         <li>Item list 3 </li>
     </ol>
 
-    <!--Span tag-->
+    <!--Span tag : -->
     <h2>
         Hello I am a <span style="color:crimson;font-style:italic">MERN</span> full stack developer.
     </h2>
-
-    
-
-
-
-
-
-
 </body>
 </html>
