--- a/Html and CSS/HTML_1/index.html
+++ b/Html and CSS/HTML_1/index.html
@@ -71,7 +71,7 @@
     <!-- Span Tag : to edit particular word in paragraph.-->
     <!-- style is attribute" and color is property  -->
 
-    <h3>Hello I am a <span style="color:coral; font-style:italic ">Front-end developer</span>.</h3>
+    <h3>Hello I am a <span style="color:darkred; font-style:italic ">Front-end developer</span>.</h3>
     
     <!-- Anchor Tag -->
     <a href="http://www.netflix.com/browse"> GO TO NETFLIX </a>
@@ -154,11 +154,5 @@
             </tr>
         </tbody>
     </table>
-
-
-
-
-
-
 </body>
 </html>
